--- a/botas.html
+++ b/botas.html
@@ -57,8 +57,7 @@
              <blockquote>
                 como nacio
 
-            </blockquote cite="https://www.youtube.com/channel/UCL0ZN_VymkFTDpw5o-Ap2sw" >
-            
+            </bockquote>            
          </aside>
          <footer class="pie">
             derechos reservado 2020 2030
